# shadowpack

./: .gitattributes  .gitignore  README.md  ShadowPack.ini  ShadowPack.sln  Todo.txt  VisualDynamicMT.sln  pack.bat
Backup/: ShadowPack.sln
ImageMagick-6.8.5/xlib/: Makefile.am
ImageMagick-6.8.5/xlib/X11/: Xresource.h
MAC_SDK_723/: Readme.txt
ShadowPack/: ApeFileMedia.cpp  ApeFileMedia.h  BMPFileMedia.cpp  BMPFileMedia.h  BMPImageMedia.cpp  BMPImageMedia.h  BytePerBlockMedia.cpp  BytePerBlockMedia.h  ChartControl.cpp  ChartControl.h  CipherStream.cpp  CipherStream.h  ConfigDlg.cpp  ConfigDlg.h  ConfigManager.cpp  ConfigManager.h  CorBuffer.cpp  CorBuffer.h  CorImageMedia.cpp  CorImageMedia.h  FileCache.cpp  FileCache.h  FileManager.cpp  FileManager.h  FileManagerBase.h  FileVersion.cpp  FileVersion.h  FrameAudioMedia.cpp  FrameAudioMedia.h  InfoBar.cpp  InfoBar.h  JPEGFileMedia.cpp  JPEGFileMedia.h  JStegPack.cpp  LocaleManager.cpp  LocaleManager.h  Media.h  MediaBase.cpp  MediaBase.h  MediaFactory.cpp  (+103 more)
demos/: 008.aiff16.ape  008.aiff24.ape  008.alac.c2.m4a  008.alac16.c2.caf  008.alac20.c2.caf  008.alac24.c2.caf  008.avr  008.be16.aiff  008.be24.aiff  008.be32.aiff  008.bwf  008.flac  008.m4a  008.mat  008.mka  008.mlp  008.mpc  008.oma  008.paf  008.pcm16.c2.ape  008.pcmu8.c2.ape  008.pvf  008.rf64  008.sd2  008.sf  008.sph  008.thd  008.tta  008.voc  008.w64  008.wavex  008.wma  008.wv.ape  Luis Royo028 - 副本.ppm  Luis Royo028.ppm  Luis Royo028.tif  UpgradeLog.tif  新建位图图像.ppm
langEnglishUS/: ShadowPack.aps  ShadowPack.rc  langEnglishUS.def  (+2 more)
libjbig/: jbig.c  (+12 more)
(+3024 files in other folders)
